--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   height: 100vh;
   margin: 0;
   font-family: "Quicksand" , sans-serif;
+  text-align: center;
 }
 
 .card-image {
@@ -32,8 +33,10 @@ body {
   background: #fff;
   border-radius: 12px;
   padding: 40px;
-  width: 50%;
   box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
+  max-width: 668px;
+  max-height: 429px;
+  text-align: center;
 }
 
 .card {
@@ -60,10 +63,11 @@ body {
 
 .start-screen p {
   font-size: 13px;
-  font-weight: lighter;
+  font-weight: bold;
   margin-right: 3rem;
   margin-bottom: 30px;
   color: #741D2A;
+  text-align: justify;
 }
 
 #start-btn {
@@ -76,6 +80,9 @@ body {
   color: white;
   cursor: pointer;
   transition: background 0.3s ease;
+
+  display: block;      /* hace que margin funcione */
+  margin-left: 0;      /* alineado a la izquierda */
 }
 
 #start-btn:hover {
@@ -171,7 +178,7 @@ body {
 .info-bar {
   display: flex;
   justify-content: space-between ; /* Esto crea el espacio entre ellos */
-  width: 60%; /* O el ancho que necesites */
+  width: 75%; /* O el ancho que necesites */
   font-family: sans-serif; /* Para una fuente similar */
   color: #741D2A; /* Un color gris oscuro */
   font-size: small;
