--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ body {
   margin-bottom: 1rem;
   font-weight: lighter;
   color: #741D2A;
+  text-align: left;
+  font-weight: bold;
   
 }
 
@@ -59,10 +61,11 @@ body {
   font-size: 2rem;
   margin-bottom: 15px;
   color: #BF393E;
+  text-align: left;
 }
 
 .start-screen p {
-  font-size: 13px;
+  font-size: 15px;
   font-weight: bold;
   margin-right: 3rem;
   margin-bottom: 30px;
@@ -183,6 +186,8 @@ body {
   color: #741D2A; /* Un color gris oscuro */
   font-size: small;
   margin-bottom: 1rem;
+   text-align: left;
+  font-weight: bold;
 }
 
 #options button {
